--------------------------------------------------------------------------------
Fusion 1.210 - February 28th, 2004
--------------------------------------------------------------------------------
- 02-29-04: Removed Perfect Hide, Monsters aggressive again, Code Error on my part. [Darkhelmet]
- 02-28-04: Experimental New Way of saving the DB, feedback please. [Darkhelmet]
- 02-27-04: Optimizing SQL Format; Part 1/2 - Startup & Connection Bugs. [AlexKreuz]
- 02-27-04: Fixed pets getting stuck in walls on warps. [Darkhelmet]
- 02-27-04: Fixed duplicating of pet.txt, please verify. [Darkhelmet]
- 02-27-04: Fixed being able to run away from your pet. [Darkhelmet]
- 02-27-04: Restructuring SQL Format; Part 3/3 - Binary Storage to Text. [AlexKreuz]
- 02-27-04: Removed a few unnecessary vars and functions. [Colus]
- 02-27-04: Updated a few inline code bits to use existing functions. [Colus]
- 02-27-04: Updated some Japanese comments. [Colus]
- 02-27-04: Updated Body Relocation, now correctly updates player position. [Colus]
- 02-27-04: Redid Maximize Power, now has proper effect and drain. [Colus]
- 02-27-04: Added Hide's SP drain, failed Cloaks use SP [Colus]
- 02-27-04: Restructuring SQL Format; Part 2/3 - Character Variables & Converter. [AlexKreuz]
- 02-27-04: Fixed SQL Error regarding guild positions. [AlexKreuz]
- 02-26-04: Added more Pet Skills. About 80% Done. [Darkhelmet]
- 02-25-04: Added Hunter Fly Pet Skill. [Darkhelmet]
- 02-25-04: Fixed "Unknown Skill" bug on GC while in Guild. [Darkhelmet]
- 02-25-04: Added Smokie's Perfect Hide (Cannot be detected by demons or insects). [Darkhelmet]
- 02-25-04: Restructuring SQL Format; Part 1/3 - The Database. [AlexKreuz]
- 02-24-04: Updated formula and error message for Pharmacy.  [Colus]
- 02-23-04: Fixed Numerous Guild Crashes.  [Darkhelmet]
- 02-22-04: Updated Pets need an accessory to use skills. [Darkhelmet]
- 02-22-04: Updated Pet Skills. [Darkhelmet]
- 02-22-04: Updated pet movement speed. [Colus]