@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
 Fusion 1.210 - February 28th, 2004
 --------------------------------------------------------------------------------
+- 03-01-04: Added Sage Skill Dispel. [Darkhelmet]
 - 02-29-04: Removed Perfect Hide, Monsters aggressive again, Code Error on my part. [Darkhelmet]
 - 02-28-04: Experimental New Way of saving the DB, feedback please. [Darkhelmet]
 - 02-27-04: Optimizing SQL Format; Part 1/2 - Startup & Connection Bugs. [AlexKreuz]
